--- a/style.css
+++ b/style.css
@@ -11,6 +11,12 @@
     width: 100%;
     height: 70px;
     background: #555252;
+    position: fixed;
+    top: 0;
+}
+
+.container{
+    padding-top: 70px;
 }
 
 .button_menu_style:active {
@@ -125,3 +131,4 @@
     align-items: center;
     flex-direction: column;
 }
+
