--- a/style.css
+++ b/style.css
@@ -1,13 +1,18 @@
-* {
+body {
     margin: 0;
-    box-sizing: border-box;
+    overflow-x: hidden;
 }
 
 .container {
-    margin: 0 auto;
+    width: 100vw;
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
 }
 
-.container_up_block {
+/* Styles for header */
+
+.header {
     width: 100%;
     height: 70px;
     background: #555252;
@@ -15,22 +20,16 @@
     top: 0;
 }
 
-.container{
-    padding-top: 70px;
+.container_up_block_buttons {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+
 }
 
 .button_menu_style:active {
     color: white;
 }
-
-.button_about_style:active {
-    color: white;
-}
-
-.button_settings_style:active {
-    color: white;
-}
-
 
 .button_menu_style {
     background-color: #fc858e;
@@ -83,30 +82,17 @@
     border-radius: 100px;
 }
 
+/* Styles for main */
 
-.container_up_block_buttons {
+main {
     display: flex;
-    justify-content: space-evenly;
+    flex-direction: column;
     align-items: center;
-
-}
-
-.container_down_block {
-    background-color: rgb(241, 168, 168);
-    height: 1000px;
-    width: 1172px;
-}
-
-.footer {
-    width: 100%;
-}
-
-.footer_block {
-    width: 100%;
-    height: 150px;
-    background: #000000;
-    margin-top: 1000px;
-    margin-right: 100px;
+    background: blue;
+    height: 3000px;
+    background-image: url(bg.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .container_down_text_style {
@@ -118,17 +104,16 @@
     font-size: 100px;
 }
 
-
-.bg_image {
-    background-image: url(bg.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    overflow: hidden;
+.content {
+    background-color: rgb(241, 168, 168);
+    height: 1000px;
+    width: 1172px;
 }
 
-.container_down {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-}
+/* Styles for footer */
 
+footer {
+    width: 100vw;
+    height: 100px;
+    background: green;
+}
