--- a/style.css
+++ b/style.css
@@ -1,85 +1,91 @@
 body {
-    margin: 0;
-    overflow-x: hidden;
+  margin: 0;
+  overflow-x: hidden;
 }
 
 .container {
-    width: 100vw;
-    height: fit-content;
-    display: flex;
-    flex-direction: column;
+  width: 100vw;
+  height: fit-content;
+  display: flex;
+  flex-direction: column;
 }
 
 /* Styles for header */
 
 .header {
-    width: 100%;
-    height: 70px;
-    background: #555252;
-    position: fixed;
-    top: 0;
+  width: 100%;
+  height: 70px;
+  background: #555252;
+  position: fixed;
+  top: 0;
 }
 
 .container_up_block_buttons {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .button_menu_style:active {
-    color: white;
+  color: white;
+}
+.button_about_style:active {
+  color: white;
+}
+
+.button_settings_style:active {
+  color: white;
 }
 
 .button_menu_style {
-    background-color: #fc858e;
-    text-decoration: none;
-    display: inline-block;
-    margin: 10px;
-    color: rgb(0, 0, 0);
-    box-shadow: 0 0 0 2px white;
-    padding: 20px 0;
-    width: 150px;
-    text-align: center;
-    text-transform: uppercase;
-    letter-spacing: 3px;
-    position: relative;
-    overflow: hidden;
-    border-radius: 100px;
+  background-color: #fc858e;
+  text-decoration: none;
+  display: inline-block;
+  margin: 10px;
+  color: rgb(0, 0, 0);
+  box-shadow: 0 0 0 2px white;
+  padding: 20px 0;
+  width: 150px;
+  text-align: center;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+  position: relative;
+  overflow: hidden;
+  border-radius: 100px;
 }
 
 .button_settings_style {
-    background-color: rgb(231, 233, 113);
-    text-decoration: none;
-    display: inline-block;
-    margin: 10px;
-    color: rgb(0, 0, 0);
-    box-shadow: 0 0 0 2px white;
-    padding: 20px 0;
-    width: 150px;
-    text-align: center;
-    text-transform: uppercase;
-    letter-spacing: 3px;
-    position: relative;
-    overflow: hidden;
-    border-radius: 100px;
+  background-color: rgb(231, 233, 113);
+  text-decoration: none;
+  display: inline-block;
+  margin: 10px;
+  color: rgb(0, 0, 0);
+  box-shadow: 0 0 0 2px white;
+  padding: 20px 0;
+  width: 150px;
+  text-align: center;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+  position: relative;
+  overflow: hidden;
+  border-radius: 100px;
 }
 
 .button_about_style {
-    background-color: #1fb7c2;
-    text-decoration: none;
-    display: inline-block;
-    margin: 10px;
-    color: rgb(0, 0, 0);
-    box-shadow: 0 0 0 2px white;
-    padding: 20px 0;
-    width: 150px;
-    text-align: center;
-    text-transform: uppercase;
-    letter-spacing: 3px;
-    position: relative;
-    overflow: hidden;
-    border-radius: 100px;
+  background-color: #1fb7c2;
+  text-decoration: none;
+  display: inline-block;
+  margin: 10px;
+  color: rgb(0, 0, 0);
+  box-shadow: 0 0 0 2px white;
+  padding: 20px 0;
+  width: 150px;
+  text-align: center;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+  position: relative;
+  overflow: hidden;
+  border-radius: 100px;
 }
 
 /* Styles for main */
@@ -88,32 +94,59 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background: blue;
     height: 3000px;
     background-image: url(bg.jpg);
     background-size: cover;
     background-repeat: no-repeat;
 }
 
-.container_down_text_style {
-    color: rgb(247, 0, 255);
+.content_main_down{
+    width: 1000px;
+    background: rgb(250, 171, 171);
+    height: 200px;
+    border: 4px solid black;
+    border-radius: 100px;
+    margin-top: 2460px ;
     display: flex;
-    text-align: center;
+    align-items: center;
     justify-content: center;
-    font-family: 'Smooch', cursive;
-    font-size: 100px;
+}
+  
+
+.container_down_text_style {
+  color: rgb(247, 0, 255);
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  font-family: "Smooch", cursive;
+  font-size: 100px;
 }
 
-.content {
-    background-color: rgb(241, 168, 168);
-    height: 1000px;
-    width: 1172px;
-}
 
 /* Styles for footer */
 
+
 footer {
-    width: 100vw;
-    height: 100px;
-    background: green;
+  width: 100vw;
+  height: 100px;
+  background: black;
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  justify-content: center;
+}
+.img_instagram {
+  width: 65px;
+  height: 65px;
+}
+
+.vk_img {
+  width: 65px;
+  height: 65px;
+}
+
+.container_main_down_text{
+   width: 90%; 
+   font-family: "Smooch", cursive;
+   height: max-content;
 }
