--- a/style.css
+++ b/style.css
@@ -90,14 +90,13 @@ body {
 
 
 
-/* Styles for main */
 
 main {
     display: flex;
     flex-direction: column;
     align-items: center;
     height: 3000px;
-    background-image: url(bg.jpg);
+    background-image: url(img/bg.jpg);
     background-size: cover;
     background-repeat: no-repeat;
 }
@@ -151,8 +150,8 @@ footer {
    font-family: "Smooch", cursive;
    height: max-content;
 }
-
+/* 
 .img_main{
   width: 1%;
   height: 1%;
-}
+} */
