--- a/style.css
+++ b/style.css
@@ -152,6 +152,20 @@ footer {
    height: max-content;
 }
 
+.image_1{
+  background: url(img/01.jpg)center/cover no-repeat;
+  width: 150px;
+  height: 300px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
 
-
-
+.image_2{
+  background: url(img/02.jpg)center/cover no-repeat;
+  width: 150px;
+  height: 300px;
+  display: flex;
+  flex-direction:row;
+  justify-content: space-evenly;
+}
