--- a/style.css
+++ b/style.css
@@ -152,7 +152,7 @@ footer {
    height: max-content;
 }
 
-/* .image_1{
+.image_1{
   background: url(img/01.jpg)center/cover no-repeat;
   width: 150px;
   height: 300px;
@@ -173,5 +173,5 @@ footer {
   display: flex;
   justify-content: space-between;
   flex-direction: row;
-  z-index: 0;
-} */
+
+}
