--- a/style.css
+++ b/style.css
@@ -154,24 +154,50 @@ footer {
 
 .image_1{
   background: url(img/01.jpg)center/cover no-repeat;
-  width: 150px;
+  width: 200px;
   height: 300px;
 }
 
 .image_2{
   background: url(img/02.jpg)center/cover no-repeat;
-  width: 150px;
+  width: 200px;
   height: 300px;
 }
 
 .image_3{
   background: url(img/03.jpg);
-  width: 150px;
+  width: 200px;
   height: 300px;
 }
 .flex_image{
   display: flex;
   justify-content: space-between;
   flex-direction: row;
+  width: 915px;
+}
 
+.image_4 {
+ background: url(img/04.jpg);
+ width: 200px;
+ height: 300px;
+}
+
+.image_5 {
+background: url(img/05.jpg);
+width: 200px;
+height: 300px;
+}
+
+.image_6 {
+  background: url(img/06.jpg);
+  width: 200px;
+  height: 300px;
+}
+
+.flex_image_2 {
+  display: flex;
+  justify-content: space-between;
+  align-content: space-around;
+  flex-direction: row;
+  width: 915px;
 }
